[build-system]
requires = ["",""]
build-backend = "setuptools.build_meta"

[project]
name =
version = "0.0.1"
authors = [{name="", email=""}]
description =
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operation System :: OS Independent",
]

[project.urls]
"Homepage" = "https://..."