[metadata]
name = pyvault
version = 0.0.1
author =
author_email =
url =
description =
long_description =
long_description_content_type = text/markdown

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operation System :: OS Independent

[options]
package_dir =
    =src
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    <packages>

[options.package_data]
"":["static/*"],